crates/sotf-types/tests/snapshots/snapshot_configs__snapshot_engine_config_populated.snap
---
source: crates/sotf-types/tests/snapshot_configs.rs
expression: config
---
{
  "version": 2,
  "frame_size": 512,
  "buffer_ms": 100,
  "output_sample_rate": 96000,
  "input_channels": 2,
  "output_channels": 6,
  "plugins": [
    {
      "plugin_type": "eq",
      "parameters": {
        "filters": [
          {
            "filter_type": "peak",
            "frequency": 1000.0,
            "gain_db": 3.0,
            "q": 1.5
          }
        ]
      }
    },
    {
      "plugin_type": "compressor",
      "parameters": {
        "attack_ms": 10.0,
        "makeup_db": 0.0,
        "ratio": 4.0,
        "release_ms": 100.0,
        "threshold_db": -12.0
      }
    },
    {
      "plugin_type": "gain",
      "parameters": {
        "gain_db": -6.0
      }
    }
  ],
  "volume": 0.75,
  "muted": true,
  "driver_mode": true,
  "allow_virtual_output": true,
  "latency_compensation": "enabled",
  "output_access": "exclusive_preferred",
  "dsd_output": "disabled",
  "oversampling_policy": "force2x",
  "network_endpoint": {
    "mode": "http_endpoint",
    "bind_addr": "127.0.0.1",
    "port": 12345
  }
}
