crates/sotf-types/tests/snapshots/snapshot_configs__snapshot_plugin_graph_eq_compressor_gain.snap
---
source: crates/sotf-types/tests/snapshot_configs.rs
expression: graph
---
{
  "nodes": [
    {
      "id": 0,
      "plugin_type": "eq",
      "parameters": {
        "filters": [
          {
            "filter_type": "peak",
            "frequency": 1000.0,
            "gain_db": 3.0,
            "q": 1.5
          }
        ]
      },
      "input_channels": 2
    },
    {
      "id": 1,
      "plugin_type": "compressor",
      "parameters": {
        "attack_ms": 10.0,
        "makeup_db": 0.0,
        "ratio": 4.0,
        "release_ms": 100.0,
        "threshold_db": -12.0
      },
      "input_channels": 2
    },
    {
      "id": 2,
      "plugin_type": "gain",
      "parameters": {
        "gain_db": -6.0
      },
      "input_channels": 2
    }
  ],
  "edges": [
    {
      "from_node": 0,
      "to_node": 1
    },
    {
      "from_node": 1,
      "to_node": 2
    }
  ]
}
